# QuizSolverBot

./: .env.template  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  questions.txt
alembic/: env.py
alembic/versions/: 7da86547537f_create_question_option_test_attempt_.py  818005945b57_add_total_questions_to_testattempt_and_.py  ed3238f6694e_create_users_table.py
app/: config.py  database.py  logger_setup.py  models.py
app/handlers/: __init__.py  add_question.py  admin.py  buttons.py  fallback.py  quiz.py  quiz_answers.py  quiz_history.py  quiz_test.py  start.py
app/models/: __init__.py  attempt_answers.py  options.py  questions.py  test_attempts.py  users.py
app/repositories/: questions.py  users.py
app/schemas/: options.py  questions.py  users.py
app/utils/: parse_question.py
